Added helpout page

--- a/Splash.html
+++ b/Splash.html
@@ -1,10 +1,12 @@
 
 
+
 <h3>To most people, financial privacy is important. Yet <a href="https://gizmodo.com/885-million-sensitive-records-leaked-online-bank-trans-1835016235">massive data breaches</a> in the financial sector, exposing millions of innocent users are still prevalent.</h3>
 
 <p>
 
 <h2>Monero is a secure, confidential, digital currency. It doesn't matter what you're doing - Monero keeps you safe.</h>
+<p>
 
 <h4>How does Monero work?</h>
 <p>
@@ -19,23 +21,37 @@
 
 <p>
 
-<h4>How to use Monero</h>
+<h4>Monero Tutorials</h>
+<p>
 <table class="tg">
   <tr>
-    <th class="tg-0pky"> As a currency, Monero has a huge focus on adoption and usability; If you have an online or physical store, accepting Monero can be easy and often times cheaper than accepting through Credit Cards or Paypal. As a spender, there's tons of digital wallets available for Monero, and you can set one up trivially on any platform. 
+    <th class="tg-0pky">Accepting Monero through an online or physical store can often times be cheaper than accepting through Credit Cards or Paypal. As a spender, there's tons of digital wallets available for Monero, and it's trivial to set one up on any platform. Look no further for ideas like these in the tutorial section! 
     </th>
-    <th class="tg-0pky"><a href="Using/Using.html">Click here to learn more about accepting or spending Monero<a></th>
+    <th class="tg-0pky"><a href="Tutorials/Tutorials.html">Click here to find Monero tutorials!<a></th>
+  </tr>
+</table>
+
+<p>
+
+<h4>Contributing to Monero</h>
+<p>
+<table class="tg">
+  <tr>
+    <th class="tg-0pky">Contributing to Monero is easy, and gets easier yet every single day. If you're a developer, mathemetician, translator, influencer, computer geek or artist, there are a number of things you can do to help out Monero every day!  
+    </th>
+    <th class="tg-0pky"><a href="Contributing/Contributing.html">Click here to learn about contributing to Monero<a></th>
   </tr>
 </table>
 
 <p>
 
 <h4>Want to help out?</h>
+<p>
 <table class="tg">
   <tr>
-    <th class="tg-0pky">Contributing to Monero is easy, and gets easier yet every single day. If you're a developer, mathemetician, translator, influencer, computer geek or artist, there are a number of things you can do to help out Monero every day!  
+    <th class="tg-0pky">This knowledgebase is authored by the Monero community. It stays up to date with the help of users dropping by every so often and submitting patches that we encorporate. If you want to help out in this process, you should definitely come on by!
     </th>
-    <th class="tg-0pky"><a href="Contributing/Contributing.html">Click here to learn about contributing to Monero<a></th>
+    <th class="tg-0pky"><a href="Helpout/Helpout.html">Click here to learn more about contributing to this knowledgebase!<a></th>
   </tr>
 </table>
 
