--- a/Contributing/Contributing.html
+++ b/Contributing/Contributing.html
@@ -6,7 +6,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
   <tr>
     <th class="tg-0pky">Language barrier is a big stump in global adoption. While there are Monero communities around the world, there are so many more with untapped potential. Thanks to improvements, translating official Monero software is now super easy to do if you speak another language. If you're further interested in translating the official Monero website, you can do that too!  
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn about Translating Monero<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn about Translating Monero</a></th>
   </tr>
 </table>
 
@@ -25,7 +25,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 <p>
     Note that even a low-end laptop can be configured to run I2P-zero at bootup and help out the privacy of the network a lot.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn about hosting any of these services!<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn about hosting any of these services!</a></th>
   </tr>
 </table>
 
@@ -36,7 +36,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
   <tr>
     <th class="tg-0pky">Have you heard of Monero Outreach? Monero Outreach is a Monero workgroup focused on expanding Monero's reach. They're always looking for technical writers and artists, so if you have an idea, or just want to help out, they're a place to go!
     </th>
-    <th class="tg-0pky"><a href="https://www.monerooutreach.org/about.php">Click here to the About Monero Outreach page<a></th>
+    <th class="tg-0pky"><a href="https://www.monerooutreach.org/about.php">Click here to the About Monero Outreach page</a></th>
   </tr>
 </table>
 
@@ -47,7 +47,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
   <tr>
     <th class="tg-0pky">Good at math, theory, and have a mind for security, but not necessarily interested in writing Monero software? You've probably come to the best project to contribute to. By learning tons about Monero, getting a good grasp of the proofs, and hacking away at more efficient solutions or test cases is a vital part that helps Monero maximize every part of it. If that sounds like you and you want to learn more, definitely check this one out.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn how to get started with Cryptography in Monero!<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn how to get started with Cryptography in Monero!</a></th>
   </tr>
 </table>
 
@@ -58,7 +58,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
   <tr>
     <th class="tg-0pky">There are a lot of ways you can develop for Monero. You can develop for the core software, the website, or for some of the 20+ active, open source projects in the ecosystem. All of them require a fundamental understanding of Monero at first, but none of them are too daunting to get in to.  
     </th>
-    <th class="tg-0pky"><a href="">Click here to see where you can help out!<a></th>
+    <th class="tg-0pky"><a href="">Click here to see where you can help out!</a></th>
   </tr>
 </table>
 
@@ -71,7 +71,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 <p>
     It's been discussed more and more lately that the natural audience of Monero drives people within the ecosystem away from any presence on social media, and as a result, Monero is missing any large social media influencers. If you're a user with a large reach, there is tons of potential to grow your network and (as seen with MoneroTalk) even room for community payments depending on your reach.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about how to help out on social media<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more about how to help out on social media</a></th>
   </tr>
 </table>
 
@@ -82,7 +82,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
   <tr>
     <th class="tg-0pky">
     </th>
-    <th class="tg-0pky"><a href=""><a></th>
+    <th class="tg-0pky"><a href=""></a></th>
   </tr>
 </table>
 
