--- a/Helpout/Helpout.html
+++ b/Helpout/Helpout.html
@@ -1,6 +1,12 @@
 
 Want to help out with this knowledgebase? Look no further! Getting started is super easy.
 
+<h1>Our Goal</h1>
+
+<p>
+
+Our goal is to make an easy to navigate, full fledged knowledgebase that allows users to quickly and easily learn about the areas of Monero that interest them the most. Want to write about Monero? This is one of the best places to do it. Join us!
+
 <p>
 
 <h4>Fork the repository on Github</h4>
