--- a/Protocol/Protocol.html
+++ b/Protocol/Protocol.html
@@ -9,7 +9,7 @@ As a cryptocurrency, Monero uses a blockchain and neat cryptographic proofs to e
   <tr>
     <th class="tg-0pky">Monero is a cryptocurrency following losely to Bitcoin's model. That means coins in a wallet are actually the sum of outputs from other wallets coming into yours; and sending a transaction just forwards outputs to other wallets instead. This gives tons of room for encryption and obfuscation, in particular using something called stealth addressing, which actually allows you to forward outputs to an address on the blockchain that is seemingly unreleated to that of the actual receipient.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about Stealth Addresses<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more about Stealth Addresses</a></th>
   </tr>
 </table>
 
@@ -22,7 +22,7 @@ As a cryptocurrency, Monero uses a blockchain and neat cryptographic proofs to e
 <p>
     A Ring Signature is a zero-knowledge proof that pretends to sign off many outputs at the same time, with no feasible way of knowing which one was actually sent. This means that if an attacker is the one who sent you Monero, they can't tell when it was actually spent - was it you who signed off the transaction, or was it someone else using your input? Better yet, if you send a transaction to an exchange or shop, they can't tell which input you used either, since it could be any of the 11 in your total group.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about Ring Signatures<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more about Ring Signatures</a></th>
   </tr>
 </table>
 
@@ -35,18 +35,20 @@ As a cryptocurrency, Monero uses a blockchain and neat cryptographic proofs to e
 <p>
     Monero uses RingCT to hide the amount sent. In RingCT, amounts can't be seen, but the sum of all the inputs (previously called "forwarded outputs") can be cryptographically proven to equal the sum of all the outputs - meaning no new Monero can actually be generated in a transaction. 
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about RingCT<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more about RingCT</a></th>
   </tr>
 </table>
 
-<h4>Verifying the Network</h>
+<h4>Mining & Verifying the Network</h>
 <table class="tg">
   <tr>
     <th class="tg-0pky">If everything in Monero is private, how can we verify no Monero has been falsely generated? How can we build essential services that rely on optional transparency?
 <p>
+    See also: <a href="Mining/Mining.html">Mining Monero</a>
+<p>
 
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more Seeing balances and Verifying the Network<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more Seeing balances and Verifying the Network</a></th>
   </tr>
 </table>
 
@@ -59,7 +61,7 @@ As a cryptocurrency, Monero uses a blockchain and neat cryptographic proofs to e
 <p>
     Monero is optionally transparent; which means you can easily verify and publicize transactions. Transactions can be verified by anyone if the sender provides a transaction private key, and the address the funds were sent to. The transaction private key is available to the sender any time after creating the transaction, meaning it can easily be shared at any time. Furthermore, Monero offers the ability to share a private view-key to entire wallets, allowing simple auditing of a user's balance.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about Auditing Wallets and Proving Sent XMR<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more about Auditing Wallets and Proving Sent XMR</a></th>
   </tr>
 </table>
 
