--- a/Splash.html
+++ b/Splash.html
@@ -15,7 +15,7 @@
     <th class="tg-0pky">Monero uses a blockchain and neat cryptographic proofs to ensure that you can transact privately, and miners to verify nobody is cheating the network. Monero uses a layer of privacy protocols, ensuring the receipient, sender, and amount are all hidden. 
     
     </th>
-    <th class="tg-0pky"><a href="Protocol/Protocol.html">Click here to learn more about the Protocol<a></th>
+    <th class="tg-0pky"><a href="Protocol/Protocol.html">Click here to learn more about the Protocol</a></th>
   </tr>
 </table>
 
@@ -27,7 +27,7 @@
   <tr>
     <th class="tg-0pky">Accepting Monero through an online or physical store can often times be cheaper than accepting through Credit Cards or Paypal. As a spender, there's tons of digital wallets available for Monero, and it's trivial to set one up on any platform. Look no further for ideas like these in the tutorial section! 
     </th>
-    <th class="tg-0pky"><a href="Tutorials/Tutorials.html">Click here to find Monero tutorials!<a></th>
+    <th class="tg-0pky"><a href="Tutorials/Tutorials.html">Click here to find Monero tutorials!</a></th>
   </tr>
 </table>
 
@@ -39,7 +39,7 @@
   <tr>
     <th class="tg-0pky">Contributing to Monero is easy, and gets easier yet every single day. If you're a developer, mathemetician, translator, influencer, computer geek or artist, there are a number of things you can do to help out Monero every day!  
     </th>
-    <th class="tg-0pky"><a href="Contributing/Contributing.html">Click here to learn about contributing to Monero<a></th>
+    <th class="tg-0pky"><a href="Contributing/Contributing.html">Click here to learn about contributing to Monero</a></th>
   </tr>
 </table>
 
@@ -51,7 +51,7 @@
   <tr>
     <th class="tg-0pky">This knowledgebase is authored by the Monero community. It stays up to date with the help of users dropping by every so often and submitting patches that we encorporate. If you want to help out in this process, you should definitely come on by!
     </th>
-    <th class="tg-0pky"><a href="Helpout/Helpout.html">Click here to learn more about contributing to this knowledgebase!<a></th>
+    <th class="tg-0pky"><a href="Helpout/Helpout.html">Click here to learn more about contributing to this knowledgebase!</a></th>
   </tr>
 </table>
 
