--- a/Tutorials/Tutorials.html
+++ b/Tutorials/Tutorials.html
@@ -7,7 +7,7 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
 <p>
     The options are vast, but the important thing to remember is how you want it to look in the end.
     </th>
-    <th class="tg-0pky"><a href="">Click here for methods on accepting Monero<a></th>
+    <th class="tg-0pky"><a href="">Click here for methods on accepting Monero</a></th>
   </tr>
 </table>
 
@@ -19,7 +19,7 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
 <p>
     The one thing to remember about any wallet is to write down the <i>mnemonic seed</i> it gives you. Keeping this safe will ensure you have full access to your funds if your harddrive fails, or if your house ever burns down!
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about accepting Monero<a></th>
+    <th class="tg-0pky"><a href="">Click here to learn more about accepting Monero</a></th>
   </tr>
 </table>
 
@@ -29,11 +29,20 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
   <tr>
     <th class="tg-0pky"> There's a number of stores accepting Monero for a variety of purposes today. If you want to buy a private phone or laptop, donate to open source projects or charities, get a VPN or VPS for your network, or even just shop for clothes and rent out a hotel, there's stores for you. 
     </th>
-    <th class="tg-0pky"><a href="">Click here to view a list of stores accepting Monero!<a></th>
+    <th class="tg-0pky"><a href="">Click here to view a list of stores accepting Monero!</a></th>
   </tr>
 </table>
 
 <p>
+
+<h4>Mining Monero</h>
+<table class="tg">
+  <tr>
+    <th class="tg-0pky">Interested in mining Monero? Look no further for a jump right into the Mining Monero guide! Note this tutorial is linking into the Prototype subsection...
+    </th>
+    <th class="tg-0pky"><a href="../Protocol/Mining/MiningTutorial/MiningTutorial.html">Click here to see how to Mine Monero!</a></th>
+  </tr>
+</table>
 
 
 
