--- a/Contributing/Contributing.html
+++ b/Contributing/Contributing.html
@@ -1,7 +1,7 @@
 
 Contributing to Monero gets easier every day, and there's tons of ways you can do it.
 
-<h4>Translators</h>
+<h4>Translators</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">Language barrier is a big stump in global adoption. While there are Monero communities around the world, there are so many more with untapped potential. Thanks to improvements, translating official Monero software is now super easy to do if you speak another language. If you're further interested in translating the official Monero website, you can do that too!  
@@ -12,26 +12,26 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 
 <p>
 
-<h4>Computer Geeks</h>
+<h4>Computer Geeks</h4>
 <table class="tg">
   <tr>
-    <th class="tg-0pky">If you have a server that isn't fully used, a desktop computer, or even a laptop you carry around, there's tons of ways to support Monero with varying intensities. From most CPU dedication to the least, here are some things you can help out with:
+    <th class="tg-0pky">If you have a server that isn't fully used, a desktop computer, or even a laptop you carry around, there's tons of ways to support Monero with varying intensities. From least CPU dedication to the most, here are some things you can help out with:
 <p>
-    Lightwallet Server + Mining + Full Node<br>
-    Mining + Full Node<br>
-    Full Node<br>
-    Pruned Node<br>
     I2P-zero<br>
+    Pruned Node<br>
+    Full Node<br>
+    Mining + Full Node<br>
+    Lightwallet Server + Mining + Full Node<br>
 <p>
     Note that even a low-end laptop can be configured to run I2P-zero at bootup and help out the privacy of the network a lot.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn about hosting any of these services!</a></th>
+    <th class="tg-0pky"><a href="Hosting/Hosting.html">Click here to learn about hosting any of these services!</a></th>
   </tr>
 </table>
 
 <p>
 
-<h4>Graphic Designers</h>
+<h4>Graphic Designers</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">Have you heard of Monero Outreach? Monero Outreach is a Monero workgroup focused on expanding Monero's reach. They're always looking for technical writers and artists, so if you have an idea, or just want to help out, they're a place to go!
@@ -42,7 +42,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 
 <p>
 
-<h4>Cryptographers</h>
+<h4>Cryptographers</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">Good at math, theory, and have a mind for security, but not necessarily interested in writing Monero software? You've probably come to the best project to contribute to. By learning tons about Monero, getting a good grasp of the proofs, and hacking away at more efficient solutions or test cases is a vital part that helps Monero maximize every part of it. If that sounds like you and you want to learn more, definitely check this one out.
@@ -53,7 +53,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 
 <p>
 
-<h4>Developers</h>
+<h4>Developers</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">There are a lot of ways you can develop for Monero. You can develop for the core software, the website, or for some of the 20+ active, open source projects in the ecosystem. All of them require a fundamental understanding of Monero at first, but none of them are too daunting to get in to.  
@@ -64,7 +64,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 
 <p>
 
-<h4>Social Media Influencer</h>
+<h4>Social Media Influencer</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">Monero really needs some of these.
@@ -77,7 +77,7 @@ Contributing to Monero gets easier every day, and there's tons of ways you can d
 
 <p>
 
-<h4>Large Investor</h>
+<h4>Large Investor</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">
