Monero node guide + Mining refactor

--- a/Protocol/Mining/Mining.html
+++ b/Protocol/Mining/Mining.html
@@ -3,18 +3,18 @@ Monero uses PoW to validate transctions - This means users called "miners" group
 
 <p>
 
-<h4>How to Mine Monero?</h>
+<h4>Mining Tutorial</h4>
 <table class="tg">
   <tr>
-    <th class="tg-0pky">
+    <th class="tg-0pky">Interested in mining Monero, to support the network or to make a small profit on the side?
     </th>
-    <th class="tg-0pky"><a href="MiningTutorial/MiningTutorial.html">Click here to learn more about Mining Monero</a></th>
+    <th class="tg-0pky"><a href="../../Tutorials/Mining/Mining.html">Click here to learn more about Mining Monero</a></th>
   </tr>
 </table>
 
 <p>
 
-<h4>Monero Mining History</h>
+<h4>Monero Mining History</h4>
 <table class="tg">
   <tr>
     <th class="tg-0pky">Monero has always been an ASIC-resistant coin. It was originally built with on Cryptonight, a memory hard hashing algorithm. The idea was anyone could mine on a regular CPU and have a chance at earning Monero while supporting the network, and building ASICs would be extremely expensive for a small edge; however the sheer price of Monero still drove ASIC manufacturers into the market, and changing the hashing algorithm every 6 months earned heavy community criticism. So in May 2018, a new idea to hash based on random code execution was born in November 2019, after completing 4 audits, RandomX went live.
