--- a/Splash.html
+++ b/Splash.html
@@ -8,7 +8,7 @@
 <h2>Monero is a secure, confidential, digital currency. It doesn't matter what you're doing - Monero keeps you safe.</h>
 <p>
 
-<h4>How does Monero work?</h>
+<h4>How does Monero work?</h4>
 <p>
 <table class="tg">
   <tr>
@@ -21,7 +21,7 @@
 
 <p>
 
-<h4>Monero Tutorials</h>
+<h4>Monero Tutorials</h4>
 <p>
 <table class="tg">
   <tr>
@@ -30,22 +30,12 @@
     <th class="tg-0pky"><a href="Tutorials/Tutorials.html">Click here to find Monero tutorials!</a></th>
   </tr>
 </table>
+See also:<br>
+&emsp;Tutorials on <a href="Tutorials/Contributing/Contributing.html">Contributing to Monero</a>
 
 <p>
 
-<h4>Contributing to Monero</h>
-<p>
-<table class="tg">
-  <tr>
-    <th class="tg-0pky">Contributing to Monero is easy, and gets easier yet every single day. If you're a developer, mathemetician, translator, influencer, computer geek or artist, there are a number of things you can do to help out Monero every day!  
-    </th>
-    <th class="tg-0pky"><a href="Contributing/Contributing.html">Click here to learn about contributing to Monero</a></th>
-  </tr>
-</table>
-
-<p>
-
-<h4>Want to help out?</h>
+<h4>Want to help out?</h4>
 <p>
 <table class="tg">
   <tr>
