--- a/Tutorials/Contributing/Hosting/Hosting.html
+++ b/Tutorials/Contributing/Hosting/Hosting.html
@@ -32,7 +32,7 @@ Hosting anonymity enhancing nodes make the Monero network stronger. Here's a gui
     <th class="tg-0pky">
         <ul>
             <li><a href="">Windows Guide</a></li>
-            <li><a href="">Linux Guide</a></li>
+            <li><a href="Nodes/Linux.html">Linux Guide</a></li>
             <li><a href="">MacOS Guide</a></li>
         </ul>
     </th>
@@ -46,7 +46,7 @@ Hosting anonymity enhancing nodes make the Monero network stronger. Here's a gui
   <tr>
     <th class="tg-0pky">
     </th>
-    <th class="tg-0pky">Link to the general mining guide</th>
+    <th class="tg-0pky"><a href="../../../Protocol/Mining/MiningTutorial/MiningTutorial.html">See: Mining Tutorial</a></th>
   </tr>
 </table>
 
