--- a/Tutorials/Tutorials.html
+++ b/Tutorials/Tutorials.html
@@ -40,7 +40,7 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
   <tr>
     <th class="tg-0pky">Interested in mining Monero? Look no further for a jump right into the Mining Monero guide! Note this tutorial is linking into the Prototype subsection...
     </th>
-    <th class="tg-0pky"><a href="../Protocol/Mining/MiningTutorial/MiningTutorial.html">Click here to see how to Mine Monero!</a></th>
+    <th class="tg-0pky"><a href="Mining/Mining.html">Click here to see how to Mine Monero!</a></th>
   </tr>
 </table>
 
