Added accepting, and spending Monero init

--- a/Tutorials/Tutorials.html
+++ b/Tutorials/Tutorials.html
@@ -7,7 +7,7 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
 <p>
     The options are vast, but the important thing to remember is how you want it to look in the end.
     </th>
-    <th class="tg-0pky"><a href="">Click here for methods on accepting Monero</a></th>
+    <th class="tg-0pky"><a href="Accepting/Accepting.html">Click here for methods on accepting Monero</a></th>
   </tr>
 </table>
 
@@ -15,11 +15,12 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
 <h4>Spending Monero</h>
 <table class="tg">
   <tr>
-    <th class="tg-0pky"> Want to spend Monero privately, and support stores that accept it too? The first thing you need to do is download a wallet (or don't, there's webwallets). When choosing a wallet, there's a few things you want to keep in mind. Are you interested in completely maximizing your privacy, or are having private transactions enough? Are you interested in having an easy setup, or would you rather have full control over everything?
-<p>
-    The one thing to remember about any wallet is to write down the <i>mnemonic seed</i> it gives you. Keeping this safe will ensure you have full access to your funds if your harddrive fails, or if your house ever burns down!
-    </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about accepting Monero</a></th>
+    <th class="tg-0pky"> Want to spend Monero privately, and support stores that accept it too? It's pretty easy; 
+    <p>
+    Step 1) You need to get some Monero, and 
+    <p>
+    Step 2) You need to get a wallet.</th>
+    <th class="tg-0pky"><a href="Spending/Spending.html">Click here to learn more about Getting Monero and Selecting Wallets</a></th>
   </tr>
 </table>
 
@@ -29,7 +30,7 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
   <tr>
     <th class="tg-0pky"> There's a number of stores accepting Monero for a variety of purposes today. If you want to buy a private phone or laptop, donate to open source projects or charities, get a VPN or VPS for your network, or even just shop for clothes and rent out a hotel, there's stores for you. 
     </th>
-    <th class="tg-0pky"><a href="">Click here to view a list of stores accepting Monero!</a></th>
+    <th class="tg-0pky"><a href="Stores/Stores.html">Click here to view a list of stores accepting Monero!</a></th>
   </tr>
 </table>
 
