Added obtaining Monero page

--- a/Protocol/Protocol.html
+++ b/Protocol/Protocol.html
@@ -9,7 +9,7 @@ As a cryptocurrency, Monero uses a blockchain and neat cryptographic proofs to e
   <tr>
     <th class="tg-0pky">Monero is a cryptocurrency following losely to Bitcoin's model. That means coins in a wallet are actually the sum of outputs from other wallets coming into yours; and sending a transaction just forwards outputs to other wallets instead. This gives tons of room for encryption and obfuscation, in particular using something called stealth addressing, which actually allows you to forward outputs to an address on the blockchain that is seemingly unreleated to that of the actual receipient.
     </th>
-    <th class="tg-0pky"><a href="">Click here to learn more about Stealth Addresses</a></th>
+    <th class="tg-0pky"><a href="StealthAddress/StealthAddress.html">Click here to learn more about Stealth Addresses</a></th>
   </tr>
 </table>
 
