--- a/Tutorials/Spending/Spending.html
+++ b/Tutorials/Spending/Spending.html
@@ -3,7 +3,7 @@
   <tr>
     <th class="tg-0pky"> There's two main ways to purchase Monero: the first is to buy Bitcoin, then buy Monero with it, and the second is to buy Monero directly. Lastly, if you don't want to use an exchange, sites like <a href="https://localmonero.co/">LocalMonero.co</a> allow you to trade with other users directly, so you can buy Monero that way too!
     </th>
-    <th class="tg-0pky">Click here to learn about Buying Monero</th>
+    <th class="tg-0pky"><a href="Obtaining/Obtaining.html">Click here to learn about Buying Monero</a></th>
   </tr>
 </table>
 
