--- a/Tutorials/Tutorials.html
+++ b/Tutorials/Tutorials.html
@@ -25,7 +25,7 @@ As a currency, Monero has a huge focus on adoption and usability; If you have an
 </table>
 
 <p>
-<h4>Some Stores Accepting Monero</h>
+<h4>Compilation of Stores Accepting Monero</h>
 <table class="tg">
   <tr>
     <th class="tg-0pky"> There's a number of stores accepting Monero for a variety of purposes today. If you want to buy a private phone or laptop, donate to open source projects or charities, get a VPN or VPS for your network, or even just shop for clothes and rent out a hotel, there's stores for you. 
